# s3-uploader-exp

./: .gitignore  .pre-commit-config.yaml  benchmark.py  generator.py  log.py  pyproject.toml  uploader.py
